<resources>
    <string name="app_name">Files</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="files">Files</string>
    <string name="image">Image</string>
    <string name="pdf">PDF</string>
    <string name="zip">Zip</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
</resources>