<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MenuFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/files"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnGoToImageMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="35dp"/>

    <Button
        android:id="@+id/btnGoToPdfMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pdf"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="35dp"/>

    <Button
        android:id="@+id/btnGoToZipMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zip"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="35dp"/>


</LinearLayout>