<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ImageFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image"
        android:textSize="40sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/pvShowUploadedImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnUploadImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/btnDownloadImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

</LinearLayout>